[gd_scene load_steps=12 format=2]

[ext_resource path="res://imagens/menu/pixil-frame-0 (19).png" type="Texture" id=1]
[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_142458-removebg-preview_resized.png" type="Texture" id=2]
[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_140340-removebg-preview_resized (2).png" type="Texture" id=3]
[ext_resource path="res://imagens/menu/image-removebg-preview_resized.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu/config.gd" type="Script" id=5]
[ext_resource path="res://fontes/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://imagens/menu/check_mark.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "options"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[node name="Node2D2" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 134.0
margin_top = 27.0
margin_right = 862.0
margin_bottom = 571.0
color = Color( 1, 1, 1, 0 )

[node name="fundo" type="ColorRect" parent="ColorRect"]
margin_left = -102.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 69.0
color = Color( 1, 1, 1, 0.780392 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/RESET = SubResource( 1 )
anims/options = SubResource( 2 )

[node name="CheckBox" type="CheckBox" parent="ColorRect"]
modulate = Color( 0.0470588, 0.00784314, 0.00784314, 1 )
margin_left = -91.0
margin_right = 101.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Tela Cheia"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -166.0
margin_right = 148.0
margin_bottom = 166.0

[node name="resume" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_right = 296.0
margin_bottom = 108.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/resume"]
margin_left = 83.0
margin_top = 36.0
margin_right = 196.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "RESUME"

[node name="menu" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_top = 112.0
margin_right = 296.0
margin_bottom = 220.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/menu"]
margin_left = 99.0
margin_top = 38.0
margin_right = 212.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "MENU"

[node name="código_vtal" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_top = 224.0
margin_right = 296.0
margin_bottom = 332.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/código_vtal"]
margin_left = 39.0
margin_top = 41.0
margin_right = 265.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )
text = "CÓDIGO DE ÉTICA"

[node name="checkMark" type="Sprite" parent="ColorRect"]
position = Vector2( -75, 31 )
scale = Vector2( 0.046875, 0.046875 )
texture = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 841.0
margin_top = -63.0
margin_right = 1098.0
margin_bottom = 194.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Timer" type="Timer" parent="TextureButton"]
wait_time = 0.3
one_shot = true

[node name="hide" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="ColorRect/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/código_vtal" to="." method="_on_cdigo_vtal_pressed"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="TextureButton/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="hide" to="." method="_on_hide_timeout"]
